fix ToC wrapping

--- a/juniorguru/css/main.scss
+++ b/juniorguru/css/main.scss
@@ -180,7 +180,7 @@ main > header {
       display: inline;
       background: $white;
       padding: 0.3rem 0.8rem;
-      margin: 0 $whitespace-0;
+      margin: 0 0.3rem;
       line-height: $line-height-0;
     }
 
